--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -9,6 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge" />
 	<meta name="viewport" content="width-device-width, initial-scale=1" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
+	<link href="css/sigin.css" rel="stylesheet" />
+	<link href="css/groupfitness.css" rel="stylesheet" />
 	<title><ui:insert name="title">??? title ???</ui:insert> |
 		Groupfitness</title>
 </h:head>
@@ -41,15 +43,16 @@
 						class="dropdown-item" href="#">Something else here</a>
 				</div></li>
 		</ul>
-
 	</div>
 	</nav>
-	<ui:insert name="content">
-	</ui:insert>
+	<div class="container content">
+		<ui:insert name="content">
+		</ui:insert>
+	</div>
+	<!-- /.container -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 		crossorigin="anonymous"></script>
-
 	<script src="scripts/popper.min.js"></script>
 	<script src="scripts/bootstrap.min.js"></script>
 </h:body>
