--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -3,18 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
-	<!-- <f:view locale="#{loginBean.locale}"> -->
-	<f:loadBundle basename="messages" var="msg" />
-	<h:head>
-		<meta http-equiv="X-UA-Compatible" content="IE-edge" />
-		<meta name="viewport" content="width-device-width, initial-scale=1" />
-		<link href="/Groupfitness/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="/Groupfitness/css/sigin.css" rel="stylesheet" />
-		<link href="/Groupfitness/css/groupfitness.css" rel="stylesheet" />
-		<title><ui:insert name="title">??? title ???</ui:insert> |
-			Groupfitness</title>
-	</h:head>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	>
+<f:loadBundle basename="messages" var="msg" />
+<h:head>
+	<meta http-equiv="X-UA-Compatible" content="IE-edge" />
+	<meta name="viewport" content="width-device-width, initial-scale=1" />
+	<link href="/Groupfitness/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/Groupfitness/css/sigin.css" rel="stylesheet" />
+	<link href="/Groupfitness/css/groupfitness.css" rel="stylesheet" />
+	<title><ui:insert name="title">??? title ???</ui:insert> |
+		Groupfitness</title>
+</h:head>
 
 <h:body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -34,15 +35,23 @@
 			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
 			<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a>
 			</li>
-			<li class="nav-item dropdown"><a
-				class="nav-link dropdown-toggle" href="http://example.com"
-				id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-				aria-expanded="false">Dropdown</a>
-				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item" href="#">Action</a> <a
-						class="dropdown-item" href="#">Another action</a> <a
-						class="dropdown-item" href="#">Something else here</a>
-				</div></li>
+			<h:form>
+			<c:choose>
+				<c:when test="#{loginBean.logged}">
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="http://example.com"
+						id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+						aria-expanded="false">#{loginBean.user.userName}</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown01">
+							<a class="dropdown-item" href="#">Action</a>
+							<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}"
+								value="#{msg['user.setting']}"  />
+							<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}"
+								value="#{msg['login.logout']}"  />
+						</div></li>
+				</c:when>
+			</c:choose>
+			</h:form>
 		</ul>
 	</div>
 	</nav>
