--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -4,8 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	>
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <f:loadBundle basename="messages" var="msg" />
 <h:head>
 	<meta http-equiv="X-UA-Compatible" content="IE-edge" />
@@ -29,28 +28,30 @@
 
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<ul class="navbar-nav mr-auto">
+
 			<li class="nav-item active"><a class="nav-link" href="#">Home
-					<span class="sr-only">(current)</span>
-			</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-			<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a>
-			</li>
+								<span class="sr-only">(current)</span>
+						</a></li>
+						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
+
 			<h:form>
-			<c:choose>
-				<c:when test="#{loginBean.logged}">
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="http://example.com"
-						id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false">#{loginBean.user.userName}</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown01">
-							<a class="dropdown-item" href="#">Action</a>
-							<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}"
-								value="#{msg['user.setting']}"  />
-							<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}"
-								value="#{msg['login.logout']}"  />
-						</div></li>
-				</c:when>
-			</c:choose>
+				<c:choose>
+					<c:when test="#{loginBean.logged}">
+			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" href="http://example.com"
+							id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">#{loginBean.user.userName}</a>
+							<div class="dropdown-menu" aria-labelledby="dropdown01">
+								<a class="dropdown-item" href="#">Action</a>
+								<h:commandLink styleClass="dropdown-item"
+									action="#{loginBean.doLogout}" value="#{msg['user.setting']}" />
+								<h:commandLink styleClass="dropdown-item"
+									action="#{loginBean.doLogout}" value="#{msg['login.logout']}" />
+							</div></li>
+					</c:when>
+				</c:choose>
 			</h:form>
 		</ul>
 	</div>
