--- a/WebContent/css/groupfitness.css
+++ b/WebContent/css/groupfitness.css
@@ -7,3 +7,20 @@
 .button {
 	margin-top:10px;	
 }
+
+.marginRight{
+	margin-right: 10px;
+}
+.tableHead{
+	background-color: #333;
+	width: 300px;
+	padding-left: 15px;
+}
+.tableBody{
+	width: 300px;
+	padding-left: 15px;
+}
+.tableText{
+	color: #fff;
+	padding-left: 15px;
+}
