--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -12,13 +12,15 @@
 	<link href="/Groupfitness/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="/Groupfitness/css/sigin.css" rel="stylesheet" />
 	<link href="/Groupfitness/css/groupfitness.css" rel="stylesheet" />
+	<link href="/Groupfitness/css/ionicons.css" rel="stylesheet" />
 	<title><ui:insert name="title">??? title ???</ui:insert> |
 		Groupfitness</title>
 </h:head>
 
 <h:body>
+<h:form>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<a class="navbar-brand" href="#">Navbar</a>
+	<a class="navbar-brand" href="#">Groupfitness</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarsExampleDefault"
 		aria-controls="navbarsExampleDefault" aria-expanded="false"
@@ -33,29 +35,32 @@
 								<span class="sr-only">(current)</span>
 						</a></li>
 						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+									
 						<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
 
-			<h:form>
+			
 				<c:choose>
 					<c:when test="#{loginBean.logged}">
 			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="http://example.com"
+									
+						<li class="ion-locked nav-link" data-pack="default" data-tags="padlock, security"></li>
+						<li class="nav-item dropdown" ><a class="nav-link dropdown-toggle" href="http://example.com"
 							id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
 							aria-expanded="false">#{loginBean.user.userName}</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown01">
-								<a class="dropdown-item" href="#">Action</a>
+								<a class="dropdown-item ion-edit" href="#">Action</a>
 								<h:commandLink styleClass="dropdown-item"
 									action="#{loginBean.doLogout}" value="#{msg['user.setting']}" />
 								<h:commandLink styleClass="dropdown-item"
 									action="#{loginBean.doLogout}" value="#{msg['login.logout']}" />
-							</div></li>
+							</div></li>		
 					</c:when>
 				</c:choose>
-			</h:form>
+			
 		</ul>
 	</div>
 	</nav>
+	</h:form>
 	<div class="container content">
 		<ui:insert name="content">
 		</ui:insert>
