--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -30,24 +30,31 @@
 
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<ul class="navbar-nav mr-auto">
-
-			<li class="nav-item active"><a class="nav-link" href="#">Home
-								<span class="sr-only">(current)</span>
-						</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-									
-						<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
-
-			
-				<c:choose>
-					<c:when test="#{loginBean.logged}">
-			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-									
-						<li class="ion-locked nav-link" data-pack="default" data-tags="padlock, security"></li>
-						<li class="nav-item dropdown" ><a class="nav-link dropdown-toggle" href="http://example.com"
+		<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
+		<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+		<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
+		<c:choose>
+			<c:when test="#{loginBean.logged}">
+  				
+  				<!-- Management Cours -->
+  				<li class="nav-item dropdown" ><a class="nav-link dropdown-toggle" href="http://example.com"
+							id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">#{msg['menu.cours.management']}</a>
+							
+					<div class="dropdown-menu" aria-labelledby="dropdown01">
+						<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}" value="#{msg['menu.cours.management.setting.typ']}" />
+						<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}" value="#{msg['menu.cours.management.setting.cat']}" />
+						<h:commandLink styleClass="dropdown-item" action="#{loginBean.doLogout}" value="#{msg['menu.cours.management.setting.cours']}" />
+					</div>
+				</li>
+				
+				<!-- Management Cours -->					
+				<li class="ion-locked nav-link" data-pack="default" data-tags="padlock, security"></li>
+				<li class="nav-item dropdown" ><a class="nav-link dropdown-toggle" href="http://example.com"
 							id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
 							aria-expanded="false">#{loginBean.user.userName}</a>
-							<div class="dropdown-menu" aria-labelledby="dropdown01">
+							
+				<div class="dropdown-menu" aria-labelledby="dropdown01">
 								<a class="dropdown-item ion-edit" href="#">Action</a>
 								<h:commandLink styleClass="dropdown-item"
 									action="#{loginBean.doLogout}" value="#{msg['user.setting']}" />
